--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ ENVIRONMENT = dev
 DEBUG = true
 
 [default]
+DB_TYPE=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=test_db1
@@ -12,6 +13,7 @@ DB_CHARSET=utf8mb4
 LOG_DIR=/home/logs/python/
 
 [test_db2]
+DB_TYPE=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=test_db2
