--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ DB_USER=root
 DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
 LOG_DIR=/home/logs/python/
+
+#step1: python3 setup.py sdist bdist_wheel
+#step2: python3 -m twine upload dist/*
+#nbltrust nblNBL1234
