--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,16 @@ DB_USER=root
 DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
 LOG_DIR=/home/logs/python/
+
+[cassandra-db]           # 数据库配置
+DB_TYPE=cassandra
+DB_HOST=127.0.0.1
+DB_PORT=9042
+DB_USER=
+DB_PASSWORD=
+DB_CHARSET=utf8mb4
+DB_KEYSPACE=spacekeyname
+SSL_CERTFILE=
+SSL_CA_CERTS=
+SSL_KEYFILE=
+LOG_DIR=/home/logs/python/
